--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,20 +22,24 @@
     font-size: 700%;
 }
 
-.cstm-btn {
-    background-color: white;
-    filter: drop-shadow(-5px 3px 2px #000000);
-    border: 2px solid black;
+// .cstm-btn {
+//     background-color: white;
+//     filter: drop-shadow(-5px 3px 2px #000000);
+//     border: 2px solid black;
 
-}
+// }
 
-.cstm-btn:hover {
-     background-color: black;
-    color: rgb(255, 255, 255);
-}
+// .cstm-btn:hover {
+//      background-color: black;
+//     color: rgb(255, 255, 255);
+// }
+
 .vw-5{
     font-size: 5vw;
 }
 .vw-2{
     font-size: 2vw;
+}
+.vw-3{
+    font-size: 3vw;
 }
